--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.3.1
 Django==3.1.4
 django-debug-toolbar==3.2
+django-filter==2.4.0
+djangorestframework==3.12.2
+Markdown==3.3.3
 Pillow==7.2.0
 pytz==2020.4
 sqlparse==0.4.1
