--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -69,7 +69,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd /home/kosteich/foodgram
+            cd /home/{{ secrets.USER }}/foodgram
             sudo docker-compose down
             sudo docker-compose up -d
 
