--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,24 @@
 asgiref==3.3.1
+backcall==0.2.0
+decorator==4.4.2
 Django==3.1.4
-django-debug-toolbar==3.2
-django-filter==2.4.0
-djangorestframework==3.12.2
-Markdown==3.3.3
-Pillow==7.2.0
-pytz==2020.4
-sqlparse==0.4.1
-asgiref==3.3.1
-Django==3.1.4
-django-debug-toolbar==3.2
 django-filter==2.4.0
 django-taggit==1.3.0
 djangorestframework==3.12.2
 fpdf2==2.2.0
+gunicorn==20.0.4
+ipython-genutils==0.2.0
+jedi==0.18.0
 Markdown==3.3.3
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==7.2.0
+prompt-toolkit==3.0.8
+psycopg2-binary==2.8.6
+ptyprocess==0.6.0
+Pygments==2.7.3
 pytz==2020.4
 sqlparse==0.4.1
+traitlets==5.0.5
+wcwidth==0.2.5
