--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,10 +23,13 @@ services:
     env_file:
       - ./.env
   nginx:
-    image: kosteich/foodgram_nginx:latest
+    image: nginx:1.19.5
+    container_name: footgram_nginx
+    restart: unless-stopped
     depends_on:
       - web
     volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - static_folder:/code/static
       - media_folder:/code/media
     ports:
